--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
+    "react-scroll-into-view": "^1.5.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sass": "^1.15.3",
