--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "file-loader": "^3.0.1",
     "node-sass": "^4.11.0",
+    "parcel-plugin-markdown-string": "^1.3.4",
+    "raw-loader": "^1.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-markdown": "^4.0.6",
+    "react-provide-scroll-position": "^1.0.2",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "react-scroll-into-view": "^1.5.0",
+    "react-transition-group": "^2.5.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sass": "^1.15.3",
