--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "react-scroll-into-view": "^1.5.0",
+    "react-syntax-highlighter": "^10.1.2",
     "react-transition-group": "^2.5.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
