--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-markdown": "^4.0.6",
+    "react-preload": "^0.6.0",
     "react-provide-scroll-position": "^1.0.2",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
