--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sass": "^1.15.3",
+    "smoothscroll-polyfill": "^0.4.3",
     "superagent": "^4.1.0"
   },
   "scripts": {
