--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "raw-loader": "^1.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-image-gallery": "^0.8.12",
     "react-markdown": "^4.0.6",
     "react-preload": "^0.6.0",
     "react-provide-scroll-position": "^1.0.2",
