--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
+    "react-cookie": "^3.0.8",
     "react-device-detect": "^1.6.1",
     "react-dom": "^16.7.0",
     "react-image-gallery": "^0.8.12",
