--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-cookie": "^3.0.8",
     "react-device-detect": "^1.6.1",
     "react-dom": "^16.7.0",
+    "react-ga": "^2.5.6",
     "react-image-gallery": "^0.8.12",
     "react-markdown": "^4.0.6",
     "react-redux": "^6.0.0",
