--- a/package.json
+++ b/package.json
@@ -3,27 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-cookie": "^3.0.8",
-    "react-device-detect": "^1.6.1",
-    "react-dom": "^16.7.0",
-    "react-ga": "^2.5.6",
-    "react-image-gallery": "^0.8.12",
-    "react-markdown": "8",
-    "react-redux": "^6.0.0",
-    "react-scripts": "5.0.1",
-    "react-syntax-highlighter": "^10.1.2",
-    "react-transition-group": "^2.5.2",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.69.5",
-    "superagent": "^4.1.0"
+    "@reduxjs/toolkit": "^2.5.0",
+    "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
+    "react-device-detect": "^2.2.3",
+    "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
+    "react-image-gallery": "^1.3.0",
+    "react-markdown": "^9.0.3",
+    "react-redux": "^9.2.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-transition-group": "^4.4.5",
+    "sass": "^1.69.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-image-gallery": "^1.2.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/react-transition-group": "^4.4.11",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": "react-app"
